--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allen Chang's Website</title>
+    <title>test | BlueBoy's Space</title>
     <link rel="icon" href="/pictures/favicon.ico">
     <link rel="stylesheet" href="/styles/main.css">
     <style>
@@ -17,22 +17,23 @@
             <a href="/">
                 <img src="/pictures/shead.png" style="width: 90%; height: 90%; margin-top: 5%; vertical-align: middle; align-items: center;">
             </a>
-            <p style="font-size: smaller;">
-                devoloped by 
-                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="color: #ffffff;">Allen Chang</a>
+            <p style="margin-top: 15px; font-size: 1px; margin-bottom: 12px;">
+                Copyright © 2023
+                <a href="https://github.com/shuba247/shuba247.github.io/blob/main/README.md" style="text-decoration: none; color: #6cfccc;" target="_blank">BlueBoy247</a>
                 <br>
                 updated on 2023-03-01
             </p>
+            <hr>
         </div>
         <div id="soption">
-            <a href="about.html"><input class="sideb" type="button" value="關於 About" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="project.html"><input class="sideb" type="button" value="專案 Projects" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
-            <a href="test.html"><input class="sideb" type="button" value="文章 Articles" style="font-size: 110%; width: 100%;height: 40px;text-align: center;"></a></br>
+            <a href="about.html"><input class="sideb" type="button" value="關於 About" style="margin-top: 0px;"></a></br>
+            <a href="project.html"><input class="sideb" type="button" value="專案 Projects"></a></br>
+            <a href="test.html"><input class="sideb" type="button" value="文章 Articles"></a></br>
         </div>
     </div>
     <div id="sideleft">0</div>
     <div id="content">
-        <h1></h1>
+        <h1>未啟用</h1>
     </div>
 
 </body>
